--- a/.vscode/tasks.json
+++ b/.vscode/tasks.json
@@ -1,6 +1,15 @@
 {
     "version": "2.0.0",
     "tasks": [
+        
+        // vscode test
+        {
+            "type": "shell",
+            "label": "echo vscode",
+            "command": "echo ${command:cmake.launchTargetDirectory}"
+        },
+
+        // cmake
         {
             "type": "cmake",
             "label": "CMake: 配置",
@@ -9,6 +18,8 @@
             "detail": "CMake 模板 配置 任务",
             "group": "build"
         },
+
+        // g++
         {
             "type": "cppbuild",
             "label": "C/C++: g++.exe 生成活动文件",
