--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -1,1 +1,4 @@
-add_executable(myspice myspice.cpp argparse.cpp read_netlist.cpp help_message.cpp)
+set(SRC_MAIN "myspice.cpp")
+set(SRC_STAMP "mat.cpp device.cpp resistor.cpp capacitor.cpp inductor.cpp mutual.cpp isrc.cpp vsrc.cpp utils.cpp stamp.src")
+
+add_executable(myspice ${SRC_MAIN} ${SRC_STAMP})
