--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -1,4 +1,5 @@
-set(SRC_MAIN "myspice.cpp")
-set(SRC_STAMP "mat.cpp device.cpp resistor.cpp capacitor.cpp inductor.cpp mutual.cpp isrc.cpp vsrc.cpp utils.cpp stamp.src")
+set(SRC_MAIN myspice.cpp)
+set(SRC_OTHERS argparse.cpp)
+set(SRC_STAMP mat.cpp device.cpp resistor.cpp capacitor.cpp inductor.cpp mutual.cpp isrc.cpp vsrc.cpp utils.cpp stamp.cpp)
 
-add_executable(myspice ${SRC_MAIN} ${SRC_STAMP})
+add_executable(myspice ${SRC_MAIN} ${SRC_OTHERS} ${SRC_STAMP})
